--- a/day-2/7-dev-01.md
+++ b/day-2/7-dev-01.md
@@ -82,4 +82,97 @@ Let's go through what we've added:
 4. `deleteTask`: Removes a task by ID
 5. `clearTasks`: Helper for testing
 
-Would you like me to proceed with the next step which will be updating the Express routes in index.js to expose these new functionalities?
+# Step 2: Implementing API Routes
+
+Let's update our `index.js` file to expose all the task management functionality through REST endpoints:
+
+```javascript
+// src/index.js
+const express = require('express');
+const cors = require('cors');
+const app = express();
+const tasks = require('./tasks');
+
+// Enable CORS and JSON parsing
+app.use(cors());
+app.use(express.json());
+
+// Welcome route
+app.get('/', (req, res) => {
+  res.send('Welcome to TaskMaster API!');
+});
+
+// Get all tasks
+app.get('/tasks', (req, res) => {
+  res.json(tasks.getAllTasks());
+});
+
+// Get single task
+app.get('/tasks/:id', (req, res) => {
+  try {
+    const task = tasks.getTaskById(Number(req.params.id));
+    if (!task) {
+      return res.status(404).json({ error: 'Task not found' });
+    }
+    res.json(task);
+  } catch (error) {
+    res.status(400).json({ error: error.message });
+  }
+});
+
+// Create new task
+app.post('/tasks', (req, res) => {
+  try {
+    const newTask = tasks.addTask(req.body);
+    res.status(201).json(newTask);
+  } catch (error) {
+    res.status(400).json({ error: error.message });
+  }
+});
+
+// Update task
+app.put('/tasks/:id', (req, res) => {
+  try {
+    const updatedTask = tasks.updateTask(Number(req.params.id), req.body);
+    res.json(updatedTask);
+  } catch (error) {
+    if (error.message === 'Task not found') {
+      return res.status(404).json({ error: error.message });
+    }
+    res.status(400).json({ error: error.message });
+  }
+});
+
+// Delete task
+app.delete('/tasks/:id', (req, res) => {
+  try {
+    tasks.deleteTask(Number(req.params.id));
+    res.status(204).send();
+  } catch (error) {
+    if (error.message === 'Task not found') {
+      return res.status(404).json({ error: error.message });
+    }
+    res.status(400).json({ error: error.message });
+  }
+});
+
+const port = process.env.PORT || 3000;
+app.listen(port, '0.0.0.0', () => {
+  console.log(`TaskMaster running on port ${port}`);
+});
+```
+
+Key changes made:
+1. Added proper error handling for all routes
+2. Implemented RESTful endpoints:
+   - GET /tasks - List all tasks
+   - GET /tasks/:id - Get single task
+   - POST /tasks - Create new task
+   - PUT /tasks/:id - Update existing task
+   - DELETE /tasks/:id - Delete task
+3. Added appropriate HTTP status codes:
+   - 201 for successful creation
+   - 204 for successful deletion
+   - 404 for not found
+   - 400 for bad requests
+
