--- a/day-2/7-dev-01.md
+++ b/day-2/7-dev-01.md
@@ -82,7 +82,7 @@ Let's go through what we've added:
 4. `deleteTask`: Removes a task by ID
 5. `clearTasks`: Helper for testing
 
-# Step 2: Implementing API Routes
+## Step 2: Implementing API Routes
 
 Let's update our `index.js` file to expose all the task management functionality through REST endpoints:
 
@@ -175,4 +175,213 @@ Key changes made:
    - 204 for successful deletion
    - 404 for not found
    - 400 for bad requests
+  
+## Step 3: Comprehensive Test Suite
+
+Let's create a complete test suite to verify all our API functionality. First, let's update our existing test file:
+
+```javascript
+// tests/tasks.test.js
+const tasks = require('../src/tasks');
+
+// Clear tasks before each test
+beforeEach(() => {
+  tasks.clearTasks();
+});
+
+describe('Task Management', () => {
+  // Existing test
+  test('should add a new task', () => {
+    const task = { title: 'Test Task' };
+    const newTask = tasks.addTask(task);
+    
+    expect(newTask.id).toBeDefined();
+    expect(newTask.title).toBe(task.title);
+    expect(newTask.completed).toBe(false);
+    expect(newTask.createdAt).toBeDefined();
+  });
+
+  test('should fail when adding task without title', () => {
+    expect(() => {
+      tasks.addTask({});
+    }).toThrow('Task title is required');
+  });
+
+  test('should get task by id', () => {
+    const task = tasks.addTask({ title: 'Find Me' });
+    const found = tasks.getTaskById(task.id);
+    expect(found).toEqual(task);
+  });
+
+  test('should update task', () => {
+    const task = tasks.addTask({ title: 'Original Title' });
+    const updated = tasks.updateTask(task.id, { 
+      title: 'Updated Title',
+      completed: true 
+    });
+
+    expect(updated.title).toBe('Updated Title');
+    expect(updated.completed).toBe(true);
+    expect(updated.id).toBe(task.id);
+    expect(updated.updatedAt).toBeDefined();
+  });
+
+  test('should not update task id or createdAt', () => {
+    const task = tasks.addTask({ title: 'Original Task' });
+    const originalId = task.id;
+    const originalCreatedAt = task.createdAt;
+
+    const updated = tasks.updateTask(task.id, {
+      id: 999,
+      createdAt: 'should not change',
+      title: 'Updated Title'
+    });
+
+    expect(updated.id).toBe(originalId);
+    expect(updated.createdAt).toBe(originalCreatedAt);
+    expect(updated.title).toBe('Updated Title');
+  });
+
+  test('should delete task', () => {
+    const task = tasks.addTask({ title: 'Delete Me' });
+    tasks.deleteTask(task.id);
+    expect(tasks.getAllTasks()).toHaveLength(0);
+  });
+
+  test('should throw error when updating non-existent task', () => {
+    expect(() => {
+      tasks.updateTask(999, { title: 'Not Found' });
+    }).toThrow('Task not found');
+  });
+
+  test('should throw error when deleting non-existent task', () => {
+    expect(() => {
+      tasks.deleteTask(999);
+    }).toThrow('Task not found');
+  });
+});
+```
+
+Now let's add API integration tests:
+
+```javascript
+// tests/api.test.js
+const request = require('supertest');
+const express = require('express');
+const cors = require('cors');
+const tasks = require('../src/tasks');
+
+// Create test app
+const app = express();
+app.use(cors());
+app.use(express.json());
+
+// Import routes (we'll need to modify index.js to export the routes)
+require('../src/index')(app);
+
+describe('TaskMaster API', () => {
+  beforeEach(() => {
+    tasks.clearTasks();
+  });
+
+  test('GET / should return welcome message', async () => {
+    const res = await request(app).get('/');
+    expect(res.status).toBe(200);
+    expect(res.text).toContain('Welcome to TaskMaster API');
+  });
+
+  test('POST /tasks should create new task', async () => {
+    const res = await request(app)
+      .post('/tasks')
+      .send({ title: 'New Task' });
+
+    expect(res.status).toBe(201);
+    expect(res.body.title).toBe('New Task');
+    expect(res.body.id).toBeDefined();
+  });
+
+  test('GET /tasks should return all tasks', async () => {
+    await request(app)
+      .post('/tasks')
+      .send({ title: 'Task 1' });
+    await request(app)
+      .post('/tasks')
+      .send({ title: 'Task 2' });
+
+    const res = await request(app).get('/tasks');
+    expect(res.status).toBe(200);
+    expect(res.body).toHaveLength(2);
+  });
+
+  test('PUT /tasks/:id should update task', async () => {
+    const task = await request(app)
+      .post('/tasks')
+      .send({ title: 'Original Task' });
+
+    const res = await request(app)
+      .put(`/tasks/${task.body.id}`)
+      .send({ title: 'Updated Task', completed: true });
+
+    expect(res.status).toBe(200);
+    expect(res.body.title).toBe('Updated Task');
+    expect(res.body.completed).toBe(true);
+  });
+
+  test('DELETE /tasks/:id should remove task', async () => {
+    const task = await request(app)
+      .post('/tasks')
+      .send({ title: 'Delete Me' });
+
+    const res = await request(app)
+      .delete(`/tasks/${task.body.id}`);
+
+    expect(res.status).toBe(204);
+
+    const checkDelete = await request(app)
+      .get(`/tasks/${task.body.id}`);
+    expect(checkDelete.status).toBe(404);
+  });
+});
+```
+
+To make this work, we need to:
+
+1. Install supertest for API testing:
+```bash
+npm install --save-dev supertest
+```
+
+2. Modify our index.js to export routes:
+```javascript
+// src/index.js
+// ... (previous code) ...
+
+// Export for testing
+module.exports = (app) => {
+  // Move all route definitions here
+};
+
+// Only start server if this is main module
+if (require.main === module) {
+  const app = express();
+  module.exports(app);
+  
+  const port = process.env.PORT || 3000;
+  app.listen(port, '0.0.0.0', () => {
+    console.log(`TaskMaster running on port ${port}`);
+  });
+}
+```
+
+3. Update package.json test script:
+```json
+{
+  "scripts": {
+    "test": "jest --verbose --coverage",
+    "test:watch": "jest --watch"
+  }
+}
+```
+
+Would you like me to proceed with setting up the packaging and deployment stages in our CI/CD pipeline?
 
